2001-06-04  Martin Baulig  <baulig@suse.de>

	* gnome-entry-component.c (PROP_IS_FILE_ENTRY): New property.
	(ensure_properties_handler): Don't call gnome_selector_get_ambient_properties().

	* gnome-image-entry-component.c
	(PROP_IS_PIXMAP_ENTRY, PROP_PREVIEW_X, PROP_PREVIEW_Y): New properties.
	(ensure_properties_handler): Don't call gnome_selector_get_ambient_properties().

	* libgnomeui-components.c: Make this work with the new GnomeSelectorWidget.

2001-06-03  Martin Baulig  <baulig@suse.de>

	* gnome-entry-component.[ch]: New files.

	* selector-components.xmldb: New file.

2001-06-01  Martin Baulig  <baulig@suse.de>

	* gnome-image-entry-component.c, gnome-icon-selector-component.c:
	Use gnome_selector_set_vfs_filter() to set the directory filter.

2001-05-23  Joe Shaw  <joe@ximian.com>

	* gnome-image-entry-component.c (drag_data_received): Change
	GNOME_DESKTOP_ITEM_LOAD_NO_SYNC to GNOME_DESKTOP_ITEM_LOAD_NO_DROP
	to make it build again.

2001-05-21  Martin Baulig  <baulig@suse.de>

	* gnome-image-entry-component.c, gnome-icon-selector-component.c:
	Use the new tristate properties and set the default values here.

2001-05-20  Martin Baulig  <baulig@suse.de>

	* gnome-image-entry-component.c: Removed all properties and use
	our client's property bag.

2001-05-20  Martin Baulig  <baulig@suse.de>

	* libgnomeui-components.c: Use GnomeSelectorFactory

2001-05-19  Martin Baulig  <baulig@suse.de>

	* gnome-image-entry-component.[ch]: Moved here from ../libgnomeui.
	* gnome-icon-selector-component.[ch]: Likewise.

	* libgnomeui-components.c: New file.

	* GNOME_UI_Components.oaf.in: New file.
