@@ -38,19 +38,10 @@ GNOME_UI_Components.oaf : $(srcdir)/GNOME_UI_Components.oaf.in $(top_builddir)/c
 	sed -e "s|\@COMPONENTS_LIBDIR\@|$(componentdir)|" \
 	$(srcdir)/GNOME_UI_Components.oaf.in > GNOME_UI_Components.oaf 
 
-component_DATA = \
-	selector-components.xmldb
-
 clean-local:
 	-rm -f $(OAF_FILES)
 
 libgnomeui_components_2_la_SOURCES = \
-	gnome-icon-selector-component.c			\
-	gnome-icon-selector-component.h			\
-	gnome-image-entry-component.c			\
-	gnome-image-entry-component.h			\
-	gnome-entry-component.c				\
-	gnome-entry-component.h				\
 	libgnomeui-components.c
 
 libgnomeui_components_2_la_LDFLAGS = \
